--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "ember-export-application-global": "^1.0.4",
     "ember-load-initializers": "^0.5.0",
     "ember-resolver": "^2.0.3",
-    "loader.js": "^4.0.0"
+    "loader.js": "^4.0.0",
+    "normalize.css": "^3.0.3",
+    "skeleton-framework": "^1.0.8"
   }
 }
